2010-08-26  Joseph Pecoraro  <joepeck@webkit.org>

Reviewed by Pavel Feldman.

LayoutTests:

    2010-08-26  Joseph Pecoraro  <joepeck@webkit.org>

            Web Inspector: attribute nodes don't get rendered in the console
            https://bugs.webkit.org/show_bug.cgi?id=44736

            Add formatting tests for attribute nodes.

            * inspector/console-format-expected.txt:
            * inspector/console-format.html:

WebCore:

    2010-08-26  Joseph Pecoraro  <joepeck@webkit.org>

            Web Inspector: attribute nodes don't get rendered in the console
            https://bugs.webkit.org/show_bug.cgi?id=44736

            Extended Test: inspector/console-format.html

            * inspector/InspectorDOMAgent.cpp:
            (WebCore::InspectorDOMAgent::buildObjectForNode): add "name" and "value" properties for Attribute nodes.
            * inspector/front-end/DOMAgent.js:
            (WebInspector.DOMNode): add "name" and "value" properties for Attribute nodes.
            * inspector/front-end/ElementsTreeOutline.js: display html for Attribute nodes.

Canonical link: https://commits.webkit.org/57049@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@66282 268f45cc-cd09-0410-ab3c-d52691b4dbfc